# WjecDocumentScraper

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  2  CHANGES.md  MORE_FILES_TO_REPROCESS.TXT  README.md  SCRIPTS.md  converters.py  gemini_llm.py  language_check.py  language_check_config.py  llm_reviewer_system_prompt.md  main.py  main_entry.py  page_utils.py  postprocess_documents.py  pyproject.toml  test-report.csv  test-report.md  unprocessedFiles.txt
.devcontainer/: Dockerfile  devcontainer.json  post_create.sh  post_start.sh
.github/: copilot-instructions.md
Documents/: README.md  language-check-report-deduped.csv  language-check-report.csv  language-check-report.md  llm-proofreader-reports.csv  llm_categorised-language-check-report.csv  verified-llm-categorised-language-check-report.csv
data/: batch_jobs.json  language-ignore-history-live.json  llm_categoriser_state.json  llm_proofreader_state.json  nutritionNotes  verifier_batch_jobs.json  verifier_state.json
docs/: ARCHITECTURE.md  BATCH_API_QUICKREF.md  BATCH_API_USAGE.md  BATCH_ORCHESTRATOR_USAGE.md  CODING_AGENT_INSTRUCTIONS.md  DEV_WORKFLOWS.md  DOCLING_CONFIG_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LANGUAGE_CHECK.md  LANGUAGE_CHECK_POST_FIX.md  LLM_PROOFREADER_DATA_LOADER_IMPLEMENTATION_GUIDE.md  LLM_PROVIDER_SPEC.md  LLM_REVIEW_MODULE_GUIDE.md  PAGE_BASED_LOADER_README.md  TROUBLESHOOTING.md  UV_GUIDE.md  manage_language_ignore.md
scripts/: README_MANUAL_TESTING.md  count_ize_suffixes.py  count_leaners.py  deduplicate_language_issues.py  find_import_cycles.py  increment_page_markers.py  manage_language_ignore.py  merge_document_reports.py  postprocess_call_main.py  process_all_subjects.py  test_multilang_manual.py
src/: __init__.py
(+1235 files in other folders)
