[project]
name = "wjecdocumentscraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "google-genai>=1.49.0",
    "json-repair>=0.53.0",
    "language-tool-python>=2.9.5",
    "marker-pdf",
    "markitdown[pdf]>=0.1.3",
    "pyspellchecker>=0.8.3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "pystache>=0.5.0",
]

[tool.uv.sources]
marker-pdf = { git = "https://github.com/datalab-to/marker.git" }

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
